[tool.poetry]
name = "tut-pororo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tut_pororo"}]

[tool.poetry.dependencies]
python = "^3.10"
pororo = {path="../pororo", develop=true}
torch = "v1.10.2"
torchvision = "0.11.3"
transformers = "4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
